--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,3 +31,14 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+- task: DeployVisualStudioTestAgent@1
+  inputs:
+    testMachineGroup: 'DESKTOP-7A20P58'
+    machineUserName: 'marian'
+    machinePassword: 'Qwerty7*9)-+'
+
+- task: VSTest@2
+  inputs:
+    testSelector: 'testRun'
+    searchFolder: '$(System.DefaultWorkingDirectory)'
